add healthcheck step

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,4 +32,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "pokedex1709" #Must be unique in Heroku
           heroku_email: "huongnguyen.nth1709@gmail.com"
-          
+          healthcheck: "https://pokedex1709.herokuapp.com/health"
+          checkstring: "ok"
