--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,4 @@ jobs:
           heroku_email: "huongnguyen.nth1709@gmail.com"
           healthcheck: "https://pokedex1709.herokuapp.com/health"
           checkstring: "ok"
+          rollbackonhealthcheckfailed: true
