Add rollback option in Heroku deployment

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,4 @@ jobs:
           heroku_email: 'jukkaa@live.com'
           healthcheck: 'https://mooc-part11.herokuapp.com/health'
           checkstring: 'ok'
+          rollbackonhealthcheckfailed: true
