--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,7 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "salty-journey-10005" #Must be unique in Heroku
           heroku_email: "A01634505@itesm.mx"
+          healthcheck: "https://salty-journey-10005.herokuapp.com/health"
+          checkstring: "ok"
+          healthcheck: "https://salty-journey-10005.herokuapp.com/version"
+          checkstring: "1"
