--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -11,7 +11,7 @@ jobs:
         steps:
             - name: Say hello
               run: |
-                  echo "Hello World!"
+                  echo "Hello World!!"
             - name: Now it is
               run: |
                   date
