--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,10 +27,12 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
-            command: npm run test:e2e
-            start: npm run start-prod
-            wait-on: 'http://localhost:5000'
-      - uses: akhileshns/heroku-deploy@v3.12.12
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: 'http://localhost:5000'
+      - name: deploy code
+        if: ${{ github.event_name == 'push' }}
+        uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: 'mooc-part11'
