--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,5 +12,9 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+      - name: Time now
+        run: |          
           date
+      - name: Directory content
+        run: |          
           ls -l
