--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,22 +1,7 @@
-<<<<<<< HEAD
-name: Hello World!
 
-on:
-  push:
-    branches:
-      - master
-
-jobs:
-  hello_world_job:
-    runs-on: ubuntu-18.04
-    steps:
-      - name: Say hello
-        run: |
-          echo "Hello World!"
-=======
 # This is a basic workflow to help you get started with Actions
 
-name: Hello World!
+name: Hello World
 
 # Controls when the workflow will run
 on:
@@ -48,4 +33,4 @@ jobs:
               # Runs a set of commands using the runners shell
       - name: Directory content
         run: ls -l
->>>>>>> 1f4d36bba61a8730ded04c58c82d72ab3c4e0e38
+
