--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,4 +35,5 @@ jobs:
           heroku_email: "jtenhun@gmail.com"
           healthcheck: "https://pokedex-jiit2020.herokuapp.com/health"
           checkstring: "ok"
-
+          delay: 2
+          healthcheck: "pokedex-jiit2020.herokuapp.com/version"
