--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,3 +38,4 @@ jobs:
           rollbackonhealthcheckfailed: true
           delay: 2
           versioncheck: "pokedex-jiit2020.herokuapp.com/version"
+          checkstring: "4"
