--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,9 +27,8 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
-      - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "tuke-pokedex" #Must be unique in Heroku
-          heroku_email: "petuukka@gmail.com"
+          heroku_app_name: 'tuke-pokedex' #Must be unique in Heroku
+          heroku_email: 'petuukka@gmail.com'
