Add rollback to deployment

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,5 @@ jobs:
           heroku_app_name: "fast-thicket-25502"
           heroku_email: "dmkk1@outlook.com" 
           healthcheck: "https://fast-thicket-25502.herokuapp.com/health"
+          checkstring: "ok"
+          rollbackonhealthcheckfailed: tru
