Add rollback to deployment try 2

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,4 +35,4 @@ jobs:
           heroku_email: "dmkk1@outlook.com" 
           healthcheck: "https://fast-thicket-25502.herokuapp.com/health"
           checkstring: "ok"
-          rollbackonhealthcheckfailed: tru
+          rollbackonhealthcheckfailed: true
