--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,7 +19,7 @@ jobs:
         run: npm run eslint
       - name: test
         run: npm test
-        name: e2e tests
+      - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
           command: npm run cypress:run
