--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
+    "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-jest": "^23.11.0",
     "eslint-plugin-react": "^7.19.0",
     "html-loader": "^1.1.0",
