--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,6 +15,8 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "shrouded-crag-39847"
           heroku_email: "malik.rodriguez@gmail.com"
+          healthcheck: "https://shrouded-crag-39847.herokuapp.com/health"
+          checkstring: "ok"
       - uses: actions/setup-node@v1
         with:
           node-version: '14.x'
