--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,6 +30,11 @@ jobs:
         run: npm run eslint
       - name: test
         run: npm test
+      - name: Github Tag Bump
+        uses: anothrNick/github-tag-action@1.34.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
