--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "css-loader": "^3.6.0",
     "cypress": "^8.3.1",
     "eslint": "^6.8.0",
+    "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-react": "^7.25.1",
     "html-loader": "^1.3.2",
