--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -10,5 +10,8 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - name: Say hello
-        run: |
-          echo "Hello World!"
+        run: echo "Hello World!"
+      - name: Now it is
+        run: date
+      - name: Run ls -l
+        run: ls -l
