--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,3 +35,4 @@ jobs:
           heroku_email: 'didzis.zvaigzne@gmail.com'
           healthcheck: 'https://full-stack-open-pokedex-1.herokuapp.com/healthcheck'
           checkstring: 'ok'
+          rollbackonhealthcheckfailed: true
