--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -14,7 +14,7 @@ jobs:
           echo "Hello World!"
       - name: Print date
         run: |
-          echo date
+          date
       - name: Print directory content
         run: |
-          echo ls
+          ls
