--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,6 +40,7 @@ jobs:
           healthcheck: 'https://full-stack-open-pokedex-1.herokuapp.com/healthcheck'
           checkstring: 'ok'
           rollbackonhealthcheckfailed: true
+      - uses: actions/checkout@v2
       - name: Bump version and push tag
         if: ${{ github.event_name == 'push' }}
         uses: anothrNick/github-tag-action@1.33.0
