--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,8 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: deploy to Heroku
-        if: ${{ github.event_name == 'push' || !contains(toJson(github.event.commits.*.message, '#skip')) }}
+        if: ${{ github.event_name == 'push' }}
+        if: ${{ !contains(toJson(github.event.commits.*.message, '#skip')) }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -42,7 +43,8 @@ jobs:
           rollbackonhealthcheckfailed: true
       - uses: actions/checkout@v2
       - name: Bump version and push tag
-        if: ${{ github.event_name == 'push' || !contains(toJson(github.event.commits.*.message, '#skip')) }}
+        if: ${{ github.event_name == 'push' }}
+        if: ${{ !contains(toJson(github.event.commits.*.message, '#skip')) }}
         uses: anothrNick/github-tag-action@1.33.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
