--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -15,3 +15,6 @@ jobs:
         run: date
       - name: Run ls -l
         run: ls -l
+      - name: Print commit message if it includes #skip
+        if: ${{ contains(toJson(github.event.commits.*.message, '#skip')) }}
+        echo: ${{ toJson(github.event.commits.*.message) }}
