#skip test new workflow

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/setup-node@v1
-        with: node-version: '12.x'
+        with:
+          node-version: '12.x'
       - name: Say hello
         run: echo "Hello World!"
       - name: Now it is
