--- a/.github/workflows/test_commit_message.yml
+++ b/.github/workflows/test_commit_message.yml
@@ -13,11 +13,9 @@ jobs:
           node-version: '12.x'
       - name: Echo commit message
         env:
-          COMMIT_MESSAGE: ${{ toJson(github.event.commits.*.message) }}
+          COMMIT_MESSAGE: ${{ ${{ github.event.commits[0].message }} }}
         run: echo "$COMMIT_MESSAGE"
 
       - name: Commit message has skip
-        env:
-          COMMIT_MESSAGE: ${{ toJson(github.event.commits.*.message) }}
-        if: ${{ contains(COMMIT_MESSAGE, '#skip') }}
+        if: ${{ contains(github.event.commits[0].message, '#skip') }}
         run: echo "Contains #skip"
