--- a/.github/workflows/test_commit_message.yml
+++ b/.github/workflows/test_commit_message.yml
@@ -16,11 +16,6 @@ jobs:
           COMMIT_MESSAGE: ${{ github.event.commits[0].message}}
         run: echo "$COMMIT_MESSAGE"
 
-      - name: Echo head commit message
-        env:
-          HEAD_COMMIT_MESSAGE: ${{ github.event.head_commit.message  }}
-        run: echo "$HEAD_COMMIT_MESSAGE"
-
       - name: Commit message has skip
-        if: ${{ !contains(github.event.commits[0].message, '#skip') || !contains(github.event.head_commit.message, '#skip') }}
+        if: ${{ contains(github.event.commits[0].message, '#skip') }}
         run: echo "Contains #skip"
