--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -50,7 +50,6 @@ jobs:
           WITH_V: true
 
       - name: Send Slack Notification
-        if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ' '), '#skip') && success() }}
         uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
@@ -64,3 +63,4 @@ jobs:
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: always()
