--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,3 +15,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: 'sheltered-harbor-54755' #Must be unique in Heroku
           heroku_email: 'dan.khalid3@gmail.com'
+          healthcheck: 'https://sheltered-harbor-54755.herokuapp.com/health'
