--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
     "test:e2e": "cypress run",
-    "cypress:open": "cypress open"
+    "cy:open": "cypress open"
   },
   "repository": {
     "type": "git",
