--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: 'pokedex-cicd-app' #Must be unique in Heroku
           heroku_email: 'crafernandezbe@unal.edu.co'
+          healthcheck: 'https://pokedex-cicd-app.herokuapp.com/health'
+          checkstring: 'ok'
