--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,6 +14,10 @@ jobs:
         with:
           node-version: '12.x'
       - name: npm install 
-        run: npm install  
-      - name: lint
+        run: npm install
+      - name: eslint
         run: npm run eslint
+      - name: run tests
+        run: npm run test
+      - name: run build
+        run: npm run build
