First e2e test with Cypress

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,4 +20,10 @@ jobs:
       - name: run tests
         run: npm run test
       - name: run build
-        run: npm run build
+        run: npm run 
+      - name: e2e tests
+          uses: cypress-io/github-action@v2
+          with:
+            command: npm run test:e2e
+            start: npm run start-prod
+            wait-on: http://localhost:5000
