--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,10 +21,10 @@ jobs:
         run: npm run test
       - name: run build
         run: npm run 
-      - name: e2e tests
-        uses: cypress-io/github-action@v2
-        with:
-          command: npm run test:e2e
-          start: npm run start-prod
-          wait-on: http://localhost:5000
-          env: PORT=5000
+#      - name: e2e tests
+#        uses: cypress-io/github-action@v2
+#        with:
+#          command: npm run test:e2e
+#          start: npm run start-prod
+#          wait-on: http://localhost:5000
+#          env: PORT=5000
