--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start-prod": "node app.js",
     "test": "jest",
     "eslint": "eslint './**/*.{js,jsx}'",
-    "build": "webpack --mode production",
-    "test:e2e": "cypress open"
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
