--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,6 +31,6 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          heroku_app_name: '${{secrets.HEROKU_APP_NAME}}'
+          heroku_email: '${{secrets.HEROKU_EMAIL}}'
           healthcheck: 'https://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/health'
