added rollback on health check failed and broke Procfile

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,5 @@ jobs:
           heroku_app_name: '${{secrets.HEROKU_APP_NAME}}'
           heroku_email: '${{secrets.HEROKU_EMAIL}}'
           healthcheck: 'https://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/health'
+          checkstring: 'ok'
+          rollbackonhealthcheckfailed: true
