--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,6 +24,6 @@ jobs:
       - name: e2e test
         uses: cypress-io/github-action@v2
         with:
-          command: npm run cypress:open
+          command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
