--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: pokedexhaksa
           heroku_email: hakonenweeti@gmail.com
+          healthcheck: https://pokedexhaksa.herokuapp.com/health
+          checkstring: ok
