--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,3 +35,4 @@ jobs:
           heroku_email: hakonenweeti@gmail.com
           healthcheck: https://pokedexhaksa.herokuapp.com/health
           checkstring: ok
+          rollbackonhealthcheckfailed: true
