--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -9,12 +9,13 @@ on:
     types: [opened, synchronize]
     
 jobs:
-  runs-on: ubuntu-18.04
-  steps:
-    - uses: 8398a7/action-slack@v3
-      with:
-        status: ${{ job.status }}
-        fields: repo,message,commit,author,action,eventName,ref,workflow,job,took
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} 
-      if: always()
+  notifications:
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+        if: always() # Pick up events even if the job fails or is canceled.
