--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
-          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
+          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-        if: always() # Pick up events even if the job fails or is canceled.
+          SLACK_WEBHOOK_URL: https://hooks.slack.com/services/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
+        if: always()
