--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -5,10 +5,16 @@ jobs:
     name: Slack Notification
     runs-on: ubuntu-latest
     steps:
-      - uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-          if: always() # Pick up events even if the job fails or is canceled.
+    - uses: actions/checkout@v2
+    - name: Slack Notification
+      uses: rtCamp/action-slack-notify@v2
+      env:
+        SLACK_CHANNEL: general
+        SLACK_COLOR: ${{ job.status }} 
+        SLACK_ICON: https://github.com/rtCamp.png?size=48
+        SLACK_MESSAGE: 'Pokedex :rocket:'
+        SLACK_TITLE: message
+        SLACK_USERNAME: crystal
+        SLACK_MSG_AUTHOR: $GITHUB_ACTOR
+        SLACK_FOOTER: ''
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
