--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -15,6 +15,6 @@ jobs:
         SLACK_MESSAGE: 'Pokedex :rocket:'
         SLACK_TITLE: message
         SLACK_USERNAME: crystal
-        SLACK_MSG_AUTHOR: $GITHUB_ACTOR
+        SLACK_MSG_AUTHOR: ${{GITHUB_ACTOR}}
         SLACK_FOOTER: ''
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
