--- a/.github/workflows/health-check-periodic.yml
+++ b/.github/workflows/health-check-periodic.yml
@@ -11,7 +11,6 @@ jobs:
       uses: jtalk/url-health-check-action@v2
       with:
         url: https://still-scrubland-68469.herokuapp.com/health
-        follow-redirect: no
-        max-attempts: 3
-        retry-delay: 5s
-        retry-all: no
+        max-attempts: '3'
+        retry-delay: '5s'
+        retry-all: 'no'
