--- a/.github/workflows/health-check-periodic.yml
+++ b/.github/workflows/health-check-periodic.yml
@@ -1,6 +1,9 @@
 on:
   schedule:
     - cron: '5 * * * *'
+  push:
+    branches:
+      - master
 name: Periodic Health check
 jobs:
   heatlcheck:
