Fixed eslint errors

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,5 +15,5 @@ jobs:
           node-version: '12.x'
       - name: npm install
         run: npm install
-      - name: line
+      - name: lint
         run: npm run eslint
