--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -13,10 +13,10 @@ jobs:
         run: |
           echo "Hello World!"
         
-        name: Now it is
+      - name: Now it is
         run: |
           date
 
-        name: Directory content
+      - name: Directory content
         run: |
           ls -l
