--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,5 +16,12 @@ jobs:
 
       - name: npm install
         run: npm install
+
       - name: lint
         run: npm run eslint
+
+      - name: build
+        run: npm run build
+        
+      - name: test
+        run: npm run test
